@@ -3,24 +3,25 @@
 **Suspicious** relies on several configuration files to define database access, services, authentication, and integration with external tools.
 This document describes each configuration file and its main parameters.
 
----
+**Directory Setup**
 
-## Important 
-
-Make sure to create folder for the apps
+Before launching **Suspicious**, make sure the required directories exist:
 
 ```bash
 cd suspicious
 mkdir -p {elasticsearch,cortex}
-```
 
-The database on launch should creates its own folder if not you can repeat the previous step but with a `db` folder.
+# If your database folder is missing:
+mkdir -p db
+````
 
-### Important files to have
+#### Elasticsearch Configuration
 
-#### Elastic logs
+##### Log Directory and `gc.log` Requirement
 
-Elasticsearch should have a folder named `logs` and a file in it called `gc.log` without it the container will not launch.
+Elasticsearch **will not start** unless a log directory and a `gc.log` file exist and are writable by the Elasticsearch process.
+
+Create them as follows:
 
 ```bash
 cd suspicious
@@ -28,34 +29,100 @@ mkdir -p elasticsearch/logs
 touch elasticsearch/logs/gc.log
 ```
 
-#### Cortex configuration file
+If this file or directory is missing, you may see errors such as:
 
-For this part you can refer to the official StrangeBee's Cortex part but for the Suspicious app here is a quick recap of what to instanciate:
+> `Error opening log file 'logs/gc.log': Permission denied`
+
+---
+
+##### Why `gc.log` is Required
+
+Elasticsearch uses Java’s Garbage Collection (GC) logging by default.
+Its JVM startup options include flags such as:
+
+```
+-Xlog:gc*:file=logs/gc.log:time,uptime,level,tags
+```
+
+If the `logs/` directory or `gc.log` file cannot be created or written to, the JVM exits before Elasticsearch starts.
+
+More details:
+
+* [Elasticsearch JVM Settings](https://www.elastic.co/guide/en/elasticsearch/reference/current/important-settings.html)
+* [JVM GC Options](https://spinscale.de/posts/2020-10-28-handling-jdk-gc-options-in-elasticsearch.html)
+
+---
+
+#### Cortex Configuration
+
+##### Cortex Access
+
+The **Cortex** service must run with the user ID `1001:1001` so that it has permission to access the Docker socket:  
+`/var/run/docker.sock`
+
+This allows Cortex and its analyzers to run containers through the Docker API.
+
+---
+
+##### Cortex Instance Setup
 
 ```bash
 cd suspicious
 touch cortex/application.conf
-```
+````
 
-Follow StrangeBee's instructions on how to customize your instance.
-Once created you will have to create an admin account.
-With this admin you have to create the organisation and a user in it, they will help suspicious launch the jobs. 
-You can create directly the API key for the user and coopy it to your `Suspicious/settings.json` in the Cortex part. You can have a glimpse of it in the `Suspicious/settings.json` part.
+1. Follow the official [StrangeBee documentation](https://docs.strangebee.com/cortex/installation-and-configuration/) to configure `application.conf`.
+2. Once Cortex is installed, create an **administrator account**.
+3. Using this admin account:
 
-#### Cortex docker file
+   * Create an **organization**.
+   * Create a **user** within that organization. This user will be used by **Suspicious** to submit jobs to Cortex.
+4. Generate an **API key** for that user, then copy it into the `Cortex` section of your `Suspicious/settings.json`.
 
-You can have cortex pulling private analyzers you have made using the `cortex/docker/config.json` file it will use automatically the Git or Docker Token you put in it.
-Be careful to use a token with the access you need and not all access on your private repo.
+Example:
 
 ```json
 {
-    "auths": {
-        "ghcr.io": {
-            "auth": ""
-        }
-    }
+  "cortex": {
+    "api_key": "GENERATED_API_KEY",
+    "url": "https://your-cortex-instance"
+  }
 }
 ```
+
+---
+
+#### Cortex Docker Configuration
+
+Cortex can pull private analyzers using the `cortex/docker/config.json` file.
+This file contains authentication credentials for your private Docker or GitHub registries.
+
+Example:
+
+```json
+{
+  "auths": {
+    "ghcr.io": {
+      "auth": "BASE64_ENCODED_TOKEN"
+    }
+  }
+}
+```
+
+> ⚠️ Use a token with **only the required permissions**, not a full-access token.
+
+---
+
+#### Docker Mounts and Job Directories
+
+When running Cortex inside a Docker container, it must mount:
+
+* The Docker socket from the host: `/var/run/docker.sock`
+* A shared directory for job files between Cortex and its analyzers
+
+If you use a private Docker registry, configure the `docker.registry` section in `application.conf` (with username/password) according to the [official documentation](https://docs.strangebee.com/cortex/installation-and-configuration/run-cortex-with-docker/).
+
+---
 
 ## Global Environment File (`.env`)
 
